deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cilium-policy-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cilium-policy-operator
  template:
    metadata:
      labels:
        app: cilium-policy-operator
    spec:
      serviceAccountName: cilium-policy-operator
      containers:
        - name: app
          image: cilium-policy-operator:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-policy-operator
spec:
  selector:
    app: cilium-policy-operator
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
